# ChordV

./: .env.example  .gitignore  README.md  chordv-admin-dist.tgz  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.codex/environments/: environment.toml
.deploy/chordv-1panel-bundle/: DEPLOY_NOTE.txt  package.json  tsconfig.base.json
.deploy/chordv-1panel-bundle/apps/api/: package.json
.github/workflows/: deploy-baota.yml  release-desktop.yml
apps/admin/: index.html  package.json  vite.config.ts
apps/admin/src/: App.tsx  main.tsx  styles.css
apps/admin/src/api/: announcements.ts  auth.ts  base.ts  client.ts  nodes.ts  plans.ts  policies.ts  subscriptions.ts  teams.ts  users.ts
apps/api/: package.json  tsconfig.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  main.ts
apps/api/test/: dev-data.service.regression.ts
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/config/: platform-versions.json
apps/desktop/scripts/: android-doctor.mjs  android-install.mjs  android-logcat.mjs  android-smoke.mjs  build-tauri-platform.mjs  check-android-bundle.mjs  check-windows-bundle.mjs  platform-version.mjs  run-android-tauri.sh  run-tauri-android.mjs  setup-xray.mjs
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: .gitignore  .tauri.macos.platform.conf.json  Cargo.toml  tauri.android.conf.json  tauri.conf.json
apps/desktop/src-tauri/src/: android_mobile_plugin.rs  android_runtime.rs  lib.rs  main.rs
apps/desktop/test/: session-lease.regression.ts
apps/edge-gateway/: package.json  tsconfig.json
apps/edge-gateway/.runtime/: edge-gateway.json  reality.json
apps/edge-gateway/src/: main.ts
deploy/1panel/chordv/: docker-compose.yml  openresty.v.baymaxgroup.com.conf
scripts/: deploy-baota.sh  desktop-runtime-selfcheck.sh  prepare-1panel-chordv-bundle.mjs  prepare-release-storage.mjs  release-center-server-checklist.md  release-desktop.sh  start-edge-dev.sh
(+130 files in other folders)
